--- a/GumballBook/Base.lproj/Main.storyboard
+++ b/GumballBook/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2k8-tY-i0d">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,122 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GumballBook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xAA-D5-Kkx">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="xAA-D5-Kkx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5Rt-oZ-MEw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xAA-D5-Kkx" secondAttribute="bottom" id="NAW-Eq-PTQ"/>
+                            <constraint firstItem="xAA-D5-Kkx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hQh-jT-j1o"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xAA-D5-Kkx" secondAttribute="trailing" id="mfq-U2-Fsc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="8Pe-sK-qky"/>
+                    <connections>
+                        <outlet property="tableView" destination="xAA-D5-Kkx" id="Ewy-pi-wCt"/>
+                        <segue destination="eUA-HQ-CB3" kind="show" identifier="segueDisplayVC" id="qCP-NU-jme"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1042.0289855072465" y="112.5"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="kqg-O7-TvY">
+            <objects>
+                <viewController id="eUA-HQ-CB3" customClass="ImageViewController" customModule="GumballBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Uhq-NH-stE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ydl-da-13j">
+                                <rect key="frame" x="49" y="155" width="316" height="276"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzs-Te-Ujg">
+                                <rect key="frame" x="121" y="514" width="175" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="job" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7I-x7-8Rv">
+                                <rect key="frame" x="104" y="576" width="207" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="species" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bmH-LR-ytq">
+                                <rect key="frame" x="119" y="635" width="178" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BrQ-NF-S9B">
+                                <rect key="frame" x="164" y="696" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="UV3-WR-aaf" firstAttribute="trailing" secondItem="bzs-Te-Ujg" secondAttribute="trailing" constant="118" id="0vW-yU-5YW"/>
+                            <constraint firstItem="Ydl-da-13j" firstAttribute="top" secondItem="UV3-WR-aaf" secondAttribute="top" constant="67" id="1Kd-aK-xkb"/>
+                            <constraint firstItem="bzs-Te-Ujg" firstAttribute="leading" secondItem="UV3-WR-aaf" secondAttribute="leading" constant="121" id="2GB-rx-8oK"/>
+                            <constraint firstItem="j7I-x7-8Rv" firstAttribute="top" secondItem="bzs-Te-Ujg" secondAttribute="bottom" constant="41" id="4RN-s1-jwK"/>
+                            <constraint firstItem="Ydl-da-13j" firstAttribute="centerX" secondItem="j7I-x7-8Rv" secondAttribute="centerX" id="Bnh-c8-39A"/>
+                            <constraint firstItem="bzs-Te-Ujg" firstAttribute="centerX" secondItem="bmH-LR-ytq" secondAttribute="centerX" id="E6v-VL-nux"/>
+                            <constraint firstItem="bmH-LR-ytq" firstAttribute="leading" secondItem="UV3-WR-aaf" secondAttribute="leading" constant="119" id="EpT-l3-akQ"/>
+                            <constraint firstItem="j7I-x7-8Rv" firstAttribute="centerX" secondItem="BrQ-NF-S9B" secondAttribute="centerX" id="NNA-st-mJR"/>
+                            <constraint firstItem="j7I-x7-8Rv" firstAttribute="leading" secondItem="UV3-WR-aaf" secondAttribute="leading" constant="104" id="NzJ-g0-2MJ"/>
+                            <constraint firstItem="Ydl-da-13j" firstAttribute="leading" secondItem="UV3-WR-aaf" secondAttribute="leading" constant="49" id="ToC-e0-Zar"/>
+                            <constraint firstItem="Ydl-da-13j" firstAttribute="centerX" secondItem="Uhq-NH-stE" secondAttribute="centerX" id="WCg-pF-9xf"/>
+                            <constraint firstItem="BrQ-NF-S9B" firstAttribute="leading" secondItem="UV3-WR-aaf" secondAttribute="leading" constant="164" id="hQS-RM-NlU"/>
+                            <constraint firstItem="BrQ-NF-S9B" firstAttribute="top" secondItem="bmH-LR-ytq" secondAttribute="bottom" constant="40" id="pxZ-Hc-CDo"/>
+                            <constraint firstItem="UV3-WR-aaf" firstAttribute="bottom" secondItem="BrQ-NF-S9B" secondAttribute="bottom" constant="145" id="qNs-NW-S7w"/>
+                            <constraint firstItem="bzs-Te-Ujg" firstAttribute="top" secondItem="Ydl-da-13j" secondAttribute="bottom" constant="83" id="vp5-Aq-zIt"/>
+                            <constraint firstItem="bmH-LR-ytq" firstAttribute="top" secondItem="j7I-x7-8Rv" secondAttribute="bottom" constant="38" id="wjM-Wj-d6c"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UV3-WR-aaf"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="foJ-fo-iAc"/>
+                    <connections>
+                        <outlet property="age" destination="BrQ-NF-S9B" id="nyz-8a-aIe"/>
+                        <outlet property="imageView" destination="Ydl-da-13j" id="bLb-aR-lND"/>
+                        <outlet property="names" destination="bzs-Te-Ujg" id="RCD-tw-o3i"/>
+                        <outlet property="occupation" destination="j7I-x7-8Rv" id="81K-mv-FJt"/>
+                        <outlet property="species" destination="bmH-LR-ytq" id="hkl-ep-QPd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FJh-0O-JKn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1810.144927536232" y="112.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Avi-Id-ntP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2k8-tY-i0d" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KnL-z5-n0s">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="pp9-zD-VcF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sXZ-s1-ig6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="112.5"/>
         </scene>
     </scenes>
 </document>
